Unify Mac build process in SBT and packaged app
Also fixes a bug where Cmd+Q bypassed NetLogo's quit method